--- a/client/index.html
+++ b/client/index.html
@@ -38,39 +38,39 @@
             Выберите значение X:
         </legend>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="-4">
+                <input class="illuminated animated" id="x_-4" name="X-radio" onchange=setValueX(id) type="radio" value="-4">
                 -4
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="-3">
+                <input class="illuminated animated" id="x_-3" name="X-radio" onchange=setValueX(id) type="radio" value="-3">
                 -3
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="-2">
+                <input class="illuminated animated" id="x_-2" name="X-radio" onchange=setValueX(id) type="radio" value="-2">
                 -2
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="-1">
+                <input class="illuminated animated" id="x_-1" name="X-radio" onchange=setValueX(id) type="radio" value="-1">
                 -1
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="0">
+                <input class="illuminated animated" id="x_0" name="X-radio" onchange=setValueX(id) type="radio" value="0">
                 0
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="1">
+                <input class="illuminated animated" id="x_1" name="X-radio" onchange=setValueX(id) type="radio" value="1">
                 1
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="2">
+                <input class="illuminated animated" id="x_2" name="X-radio" onchange=setValueX(id) type="radio" value="2">
                 2
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="3">
+                <input class="illuminated animated" id="x_3" name="X-radio" onchange=setValueX(id) type="radio" value="3">
                 3
             </label>
             <label>
-                <input class="illuminated animated" name="X-radio" onchange=setValueX() type="radio" value="4">
+                <input class="illuminated animated" id="x_4" name="X-radio" onchange=setValueX(id) type="radio" value="4">
                 4
             </label>
         </fieldset>
@@ -130,9 +130,6 @@
         <figcaption>2024</figcaption>
     </figure>
 </footer>
-
-<script src="draw.js"></script>
-<script src="validate.js"></script>
-<script src="dataManager.js"></script>
 </body>
+<script src="script.js"></script>
 </html>
