--- a/client/index.html
+++ b/client/index.html
@@ -77,9 +77,9 @@
 
         <div>
             Введите Y:
-            <label for="label_y"></label>
-            <input id="label_y" maxlength="6" name="Y-input" placeholder="не менее -3 и не более 5" required
-                   type="text">
+            <label for="y_input">
+            </label><input id="y_input" maxlength="6" name="Y-input" placeholder="не менее -3 и не более 5" required
+                                                type="text">
         </div>
 
         <div>
@@ -122,7 +122,7 @@
         </tbody>
     </table>
     <div id="canvas-container">
-        <canvas height="300px" id="myCanvas" width="300px"></canvas>
+        <canvas height="320px" id="myCanvas" width="320px"></canvas>
     </div>
 </main>
 <footer>
