Alpha version 1.1 of the lab1. @media style has been added

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="page">
 <header>
     <div class="menu">
         <input class="burger-checkbox" id="burger-checkbox" type="checkbox">
@@ -27,8 +28,6 @@
         </div>
     </div>
 </header>
-
-<main>
     <div id="input-container">
         <div>
             <h3>Валидация введённых значений:</h3>
@@ -122,14 +121,14 @@
         </tbody>
     </table>
     <div id="canvas-container">
-        <canvas height="320px" id="myCanvas" width="320px"></canvas>
+        <canvas height="350px" id="myCanvas" width="350px"></canvas>
     </div>
-</main>
 <footer>
     <figure>
         <figcaption>2024</figcaption>
     </figure>
 </footer>
+</div>
 </body>
 <script src="script.js"></script>
 </html>
