Update script.js. Update server-side.

--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
                 <th>Y</th>
                 <th>R</th>
                 <th>Result</th>
-                <th>Execution time</th>
+                <th>Execution time(ms)</th>
                 <th>Current time</th>
             </tr>
             </thead>
